# rust-weather-service

./: Cargo.toml  Procfile
src/: env.rs  main.rs
src/cwb/: mod.rs
src/cwb/api/: get_weather_data.rs  get_weather_forecast.rs
src/cwb/logic/: get_weather_data.rs  get_weather_forecast.rs  mod.rs
src/cwb/model/: cwb.rs  mod.rs  resp.rs
