[package]
name = "kirby_weather"
version = "0.1.0"
edition = "2021"
description = "A fun weather service where you can get weather information in Taiwan."
license = "MIT"

[dependencies]
reqwest = { version = "*", features = ["json"] }
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
routerify = "*"
querystring= "*"
serde_json = "*"
rayon = "*"
futures = "*"
itertools = "*"
dotenv = "*"
chrono = "*"